app.js /ewmSaveActionType call added (was not present earlier) index.html -> Added local copy for UI Grid CSS and JS ItemMaster : MasterID changed to MasterID from rootScope._userInfo Fonts file added for UI Grid RulesCtrl -> Save Rule function added SubuserCtrl -> Big issue with rule assigning and saving subuser resolved BusinessManagerCtrl -> Module visibilites check removed (Only applicable for end users not for subusers)

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1488,3 +1488,7 @@ input[type="text"].ui-grid-filter-input {
     padding-left: 0;
     position: relative;
 }
+
+.top-clearfix-half{
+    margin-top:50px;
+}
